--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,10 +8,16 @@ body{
     color:white;
     font-size:25px;
     font-weight:bolder;
+    height:800px;
 }
 .text{
     display:flex;
     justify-content: center;
     align-items: center;
     padding-left: 14px;
+}
+.image{
+    display:flex;
+    justify-content: center;
+    align-items: center;   
 }
