--- a/stylesheet.css
+++ b/stylesheet.css
@@ -31,3 +31,23 @@ body{
     height:600px;
     min-height:max-content;
 }
+.container3{
+    display:flex;
+    background-color: black;
+    color:white;
+    font-size:25px;
+    font-weight:bolder;
+    height:800px;
+    min-height:max-content;
+}
+.poster1{
+    display:flex;
+    flex-direction: column;
+    align-content:center;
+    justify-content: center;
+}
+.subtext2{
+    display:flex;
+    align-content:center;
+    justify-content: center;
+}
