--- a/stylesheet.css
+++ b/stylesheet.css
@@ -51,3 +51,10 @@ body{
     align-content:center;
     justify-content: center;
 }
+.title{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    background-color: black;
+    color:white;
+}
