refine flexbox code and style text paragraphs.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,9 +13,13 @@ body{
 }
 .text{
     display:flex;
+    height:300px;
+    width:1100px;
+    align-self:center;
     justify-content: center;
     align-items: center;
-    padding-left: 14px;
+    padding-left: 14px;    
+    background-color:gray;
 }
 .image{
     display:flex;
