Style image size for top page and redefine flexbox sizes.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,6 +2,10 @@ body{
     display:flex;
     flex-direction:column;    
 }
+img{
+    height:500px;
+    width:800px;
+}
 .container1{
     display:flex;
     background-color: black;
@@ -24,7 +28,9 @@ body{
 .image{
     display:flex;
     justify-content: center;
-    align-items: center;   
+    align-items: center; 
+    max-width:fit-content;
+    flex-wrap:wrap;
 }
 .container2{
     display:flex;
