--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,6 +10,7 @@ img{
     display:flex;
     background-image:url(../Edgar_Wright/images/image_processing20220908-138-bacjph.jpg);
     background-size:cover;
+    background-color:black;
     color:white;
     font-size:25px;
     font-weight:bolder;
@@ -18,13 +19,15 @@ img{
 }
 .text{
     display:flex;
-    height:300px;
-    width:1100px;
-    align-self:center;
+    margin-bottom:100px;
+    width:100%;
+    height:200px;
+    align-self:flex-end;
     justify-content: center;
     align-items: center;
     padding-left: 14px;    
-    background-color:gray;
+    background-color:rgba(0, 3, 0, 0.7);
+    border-radius:5%;
 }
 .image{
     display:flex;
