--- a/stylesheet.css
+++ b/stylesheet.css
@@ -73,3 +73,12 @@ img{
     background-color: black;
     color:white;
 }
+.dead_to_rights{
+    display:flex;
+    background-color: black;
+    color:white;
+    font-size:25px;
+    font-weight:bolder;
+    height:600px;
+    min-height:max-content;
+}
