add styling for dead to rights section.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -73,7 +73,7 @@ img{
     background-color: black;
     color:white;
 }
-.dead_to_rights{
+.Dead_to_rights{
     display:flex;
     background-color: black;
     color:white;
