Correct container names.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -73,7 +73,7 @@ img{
     background-color: black;
     color:white;
 }
-.Dead_to_rights{
+.Dead_right{
     display:flex;
     background-color: black;
     color:white;
