--- a/stylesheet.css
+++ b/stylesheet.css
@@ -47,7 +47,7 @@ img{
     min-height:max-content;
 }
 .container3{
-    display:flex;
+    display:flex;   
     background-color: black;
     color:white;
     font-size:25px;
@@ -74,11 +74,12 @@ img{
     color:white;
 }
 .Dead_right{
-    display:flex;
-    background-color: black;
-    color:white;
+    background-image:url(../Edgar_Wright/images/dead-right.jpg);
+    min-height:600px;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: contain;
     font-size:25px;
     font-weight:bolder;
-    height:600px;
-    min-height:max-content;
+    
 }
