--- a/stylesheet.css
+++ b/stylesheet.css
@@ -77,6 +77,7 @@ img{
 }
 .Dead_right{
     background-image:url(../Edgar_Wright/images/dead-right.jpg);
+    /*Creates parallax scrolling effect */
     height:900px;
     background-attachment: fixed;
     background-repeat: no-repeat;
