--- a/stylesheet.css
+++ b/stylesheet.css
@@ -94,3 +94,8 @@ img{
     justify-content: center;
     border:1px solid blue;
 }
+.subtext2{
+    display:flex;
+    align-items:center;
+    justify-content: center;
+}
