comments add to explain code for image flexbox.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,6 +33,7 @@ img{
     border-radius:5%;
 }
 .image{
+    /*Create image size and placement for first image */
     display:flex;
     justify-content: center;
     align-items: center; 
